kalabox/kalabox#1219: Correct throbber z-index.

--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -159,7 +159,7 @@
     left: 50%;
     top: 40%;
     margin: -50px -50px;
-    z-index: 1000;
+    z-index: 15;
   }
 
   @-webkit-keyframes loader {
